Replace the deprecated new Boolean() with Boolean.valueOf()
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>